# api

./: Cargo.toml  Secrets.toml.example  build.rs  docker-compose.yml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  state.rs
src/auth/: jwt.rs  mod.rs  model.rs  password.rs  services.rs  utils.rs  whitelist.rs
src/message/: mod.rs  models.rs  services.rs
src/models/: user.rs
src/routes/: auth.rs  message.rs  mod.rs  system.rs  user.rs
src/system/: mod.rs  service.rs
src/user/: models.rs  payload.rs  services.rs  utils.rs
src/utils/: error.rs
